--- a/src/components/container/Home/BlogPage.scss
+++ b/src/components/container/Home/BlogPage.scss
@@ -2,6 +2,28 @@
     color: #fff;
     margin: 0% 5% 5% 5%;
 
+    .loading {
+        max-width: 100%;
+        text-align: center;
+
+        svg {
+            max-width: 50%;
+            max-height: 50%;
+            padding: 1rem;
+        }
+    }
+
+    .error {
+        max-width: 100%;
+        text-align: center;
+
+        svg {
+            max-width: 70%;
+            max-height: 70%;
+            padding: 1rem;
+        }
+    }
+
     .blog_header {
         margin-bottom: 1.5rem;
 
@@ -83,8 +105,6 @@ a {
             font-family: monospace;
         }
     }
-
-
 }
 
 .block-content-code::-webkit-scrollbar {
