--- a/src/components/container/Error/Error.scss
+++ b/src/components/container/Error/Error.scss
@@ -3,8 +3,7 @@
     text-align: center;
 
     svg {
-        max-width: 70%;
-        max-height: 70%;
-        padding: 1rem;
+        max-width: 600px;
+        max-width: 600px;
     }
 }
