--- a/src/components/container/Home/BlogPage.scss
+++ b/src/components/container/Home/BlogPage.scss
@@ -3,12 +3,13 @@
     margin: 0% 5% 5% 5%;
 
     .loading {
+        margin-top: 5rem;
         max-width: 100%;
         text-align: center;
 
         svg {
-            max-width: 50%;
-            max-height: 50%;
+            max-width: 300px;
+            max-height: 300px;
             padding: 1rem;
         }
     }
@@ -18,9 +19,8 @@
         text-align: center;
 
         svg {
-            max-width: 70%;
-            max-height: 70%;
-            padding: 1rem;
+            max-width: 600px;
+            max-width: 600px;
         }
     }
 
