--- a/src/components/container/Home/BlogPage.scss
+++ b/src/components/container/Home/BlogPage.scss
@@ -42,7 +42,7 @@ a {
 .block-content-paragraph {
     margin-bottom: 1rem;
     color: white;
-    text-align: justify;
+    // text-align: justify;
 }
 
 .block-content-heading {
@@ -50,7 +50,7 @@ a {
     font-weight: bold;
     margin-bottom: 1rem;
     color: white;
-    text-align: justify;
+    // text-align: justify;
 }
 
 .block-content-list {
@@ -58,7 +58,7 @@ a {
     margin-bottom: 1rem;
     padding-left: 1.5rem;
     color: white;
-    text-align: justify;
+    // text-align: justify;
 
     .block-content-list-item {
         margin-bottom: 0.5rem;
