--- a/src/components/container/Home/Home.scss
+++ b/src/components/container/Home/Home.scss
@@ -152,8 +152,8 @@
 
                             p {
                                 font-size: 0.7rem;
-                                text-align: justify;
-                                text-justify: inter-word;
+                                // text-align: justify;
+                                // text-justify: inter-word;
                                 overflow: hidden;
                             }
                         }
